src/scss/main.scss
/* ... */
/* ALERT */
.alert {
  margin-top: 20px;
}

.alert-success {
  background-color: var(--lightblue);
  border-color: var(--darkblue);
  color: var(--darkblue);

  .close {
    color: var(--darkblue);
    opacity: 1;
    text-decoration: none;

    &:hover {
      color: var(--strongest);
    }
  }

  a {
    color: var(--strongest);
    text-decoration: underline;

    &:hover {
      text-decoration: none;
    }
  }
}

.alert-warning {
  background-color: var(--lightgold);
  border-color: var(--darkgold);
  color: var(--darkgold);

  .close {
    color: var(--darkgold);
    opacity: 1;
    text-decoration: none;

    &:hover {
      color: var(--strongest);
    }
  }

  a {
    color: var(--strongest);
    text-decoration: underline;

    &:hover {
      text-decoration: none;
    }
  }
}

.alert-danger {
  background-color: var(--lightred);
  border-color: var(--darkred);
  color: var(--darkred);

  .close {
    color: var(--darkred);
    opacity: 1;
    text-decoration: none;

    &:hover {
      color: var(--strongest);
    }
  }

  a {
    color: var(--strongest);
    text-decoration: underline;

    &:hover {
      text-decoration: none;
    }
  }
}

.hover-danger:hover {
  background-color: var(--lightred);
  border-color: var(--darkred);
  color: var(--strongest);
}

.hover-warning:hover {
  background-color: var(--lightgold);
}

.hover-action:hover {
  color: var(--primary);
  transition: color 0.8s ease;
}

button:disabled {
  cursor: not-allowed;
}

.separator {
  border-bottom: 1px solid var(--firstlevel);
  margin: 20px 0;
  padding-bottom: 30px;
}

/* beta ribbon */
.beta {
  background: var(--primary);
  border-radius: 5px;
  color: var(--white);
  display: inline-block;
  font-family: sans-serif;
  font-size: 10px;
  font-weight: bold;
  line-height: 80%;
  padding: 4px;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  top: -12px;
  transform: rotate(35deg);
}

#body_view {
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/contain */
  /* we cannot apply strict here */
  contain: content;

  img {
    max-height: 100%;
    max-width: 100%;
  }

  p {
    // break super long words, see #4169
    overflow-wrap: break-word;
    word-wrap: break-word;
  }
}

/* fix for big images uploaded in the text */
.entity .txt {
  overflow: auto;
}

.table {
  /* display borders correctly, keeps cells flush without extra spacing. See #5681  */
  border-collapse: separate;
  border-spacing: 0;

  button,
  span,
  thead,
  th,
  td {
    color: var(--mediumstrong);
  }

  td,
  th {
    border-color: var(--secondary-muted);
  }

  thead {
    position: sticky;
    top: 0;

    /* thead with no filter on top need to have this class to have a top border */
    /* stylelint-disable-next-line selector-no-qualifying-type */
    &.with-top {
      border-top: 1px solid var(--firstlevel);
    }

    th {
      border-bottom: var(--firstlevel) 1px solid;
    }
  }

  tbody {
    background-color: var(--white);

    /* stylelint-disable-next-line selector-no-qualifying-type */
    &.bgnd-transparent {
      background-color: var(--mainbackground);
    }
  }

  td {
    width: fit-content;

    img {
      height: auto;
      max-width: 100%;
      object-fit: contain;
    }
  }

  th {
    white-space: nowrap;

    &:not(:last-child) {
      border-right: var(--firstlevel) 1px solid;
    }
  }

  .no-wrap {
    white-space: nowrap;
  }
}

/* zebra only when the actual table does not have inline background-color */
table:not([style*='background-color']) > tbody > tr:nth-child(even) {
  background-color: var(--white);
}

table:not([style*='background-color']) > tbody > tr:nth-child(odd) {
  background-color: var(--mainbackground);
}

/* the first row does not need a border-top */
tr:first-child td {
  border-top-width: 0;
}

/* enable responsive tables while preserving structure via horizontal scrolling (phone, tablets, etc.) */
.table-container {
  overflow-x: auto;
}

/* TABLE SHOW MODE */
.item-table {
  .title {
    font-size: 100%;
  }

  .item-date,
  .item-owner {
    white-space: nowrap;
  }

  .item-next {
    max-width: 14ch;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  .tags {
    max-width: 20ch;
    overflow-wrap: normal;  // don't force per-character wrapping
    word-break: keep-all;
  }

  .item-rating {
    min-width: 66px;
    text-align: center;
  }
}

/* table in view mode, always add borders, see #4436 */
#body_view {
  table,
  td,
  tr {
    border: 1px solid var(--secondary-muted);
  }
}

/* required labels/input */
.required-label::after {
  color: var(--dangerred);
  content: ' *';
}

.margin-1px {
  margin: 1px;
}

.vertical-separator {
  border-right: 1px solid var(--secondlevel);
  height: 1.8rem;
  margin-left: 1rem;
  margin-right: 1rem;

  /* separator disappears on small screens */
  @media (max-width: 550px) {
    border-right: 0;
    margin-left: 0;
    margin-right: 0.5rem;
  }
}

/* NOTIFICATIONS */

/* container for notifications in top left of screen */
#overlay-container {
  display: flex;
  flex-direction: column;
  gap: 10px;
  left: 10px;
  position: fixed;
  top: 10px;
  z-index: 19850;
}

/* class for a single notification */
.overlay {
  border-radius: 5px;
  display: flex;
  line-height: 50px;
  opacity: 0.9;
  padding: 0 10px;
  // keep this above 1200 for tinymce fullscreen mode
  // see #2419
  // and over 15000 for open vector editor fullscreen mode
  z-index: 19850;
}

.overlay p {
  color: var(--chrome-fg);
  font-weight: bold;
  margin-bottom: 0;
}

.overlay-success {
  animation: slideInOut 3.5s ease-in-out forwards;
  background-color: var(--primary);
}

.overlay-error,
.overlay-warning {
  animation: slideIn 3.5s ease-in forwards;

  span > i {
    color: var(--strongest);
  }

  &:hover {
    span > i {
      color: var(--darkred);
    }
  }
}

.overlay-error {
  background-color: var(--lightred);
}

.overlay-warning {
  background-color: var(--lightgold);
}
/* ... */

